# OpenCV_test

./: .gitignore  CMakeLists.txt
include/: ColorQuantization.h
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
src/: CMakeLists.txt  ColorQuantization.cpp  main.cpp
